# OpenGL-GameEngine

./: README.md
GameEngineVS2017/: CMakeLists.txt
GameEngineVS2017/GameEngine/Headers/Rendering/Renderer/: IWindow.hpp  WindowCreateInfo.hpp
GameEngineVS2017/GameEngine/Headers/Rendering/Renderer/OpenGL33/: OpenGL33Window.hpp
GameEngineVS2017/GameEngine/Sources/: CMakeLists.txt  main.cpp
GameEngineVS2017/GameEngine/Sources/Rendering/Renderer/: IWindow.cpp
GameEngineVS2017/GameEngine/Sources/Rendering/Renderer/OpenGL33/: OpenGL33Window.cpp
GameEngineVS2017/Lib/: glew32.lib  glfw3.lib
